# WeatherForecastApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MainWindow/: CMakeLists.txt  ErrorDialog.cpp  ErrorDialog.hpp  MainWindow.cpp  MainWindow.hpp  WeatherView.cpp  WeatherView.hpp  button.qcss  resourses.qrc  style.qcss
MainWindow/resources/backgrounds/: bg2.jpg:Zone.Identifier
MainWindow/resources/styles/: backgrounds.qss
Utilities/: Filedownloader.cpp  Geolocation.cpp  Geolocation.hpp  Translator.cpp  Translator.hpp  filedownloader.cpp  filedownloader.hpp
WeatherAPI/: CMakeLists.txt  WeatherAPI.cpp  WeatherAPI.hpp  WeatherObject.cpp  WeatherObject.hpp
